@@ -31,7 +31,8 @@
 [PATHS]
 # proxies: None
 # xelatex: xelatex
-# mobigen: kindlegen  # can also be a path to Calibre's ebook-convert
-# mobilang: # converter to use for languages not supported by Kindlegen
+# mobigen: ebook-convert  # can also be a path to kindlegen
+# mobilang: ebook-convert # converter to use for languages not supported by Kindlegen
+# mobikf8:  ebook-convert # converter for kf8
 # groff: groff
 # rhyming_dict: None
